# energy_benchmarking_grpc2

./: .gitignore  README.md  bench.sh  benchmarkit.sh  build.sh  collect_stats.sh  energy_bench.sh  energy_bench_withhwpc.sh  energy_bench_withhwpc_steps.sh  fixed_duration.sh  fixed_requests.sh  frameworks.md  generate_random_payload.sh  hwpc_sensor.sh  post_to_influx.sh  rename.sh  sample.txt  scenario2_test_concurrency.sh  scenario2_test_payload.sh  scenario_evolutionofclients.sh  scenario_test_payload.sh  test_payload.sh
01_dotnet_grpc_bench/: Dockerfile
02_java_grpc_zgc_bench/: Dockerfile
03_java_grpc_pgc_bench/: Dockerfile
04_java_grpc_she_bench/: Dockerfile
05_java_grpc_g1gc_bench/: Dockerfile
06_java_micronaut_bench/: Dockerfile
07_java_grpc_sgc_bench/: Dockerfile
08_go_grpc_bench/: Dockerfile
09_kotlin_grpc_bench/: Dockerfile
11_csharp_grpc_bench/: Dockerfile
12_rust_tonic_st_bench/: Dockerfile
14_java_aot_bench/: Dockerfile
15_cpp_grpc_st_bench/: Dockerfile
16_php_grpc_bench/: Dockerfile
17_elixir_grpc_bench/: Dockerfile
18_scala_akka_bench/: Dockerfile
19_swift_grpc_bench/: Dockerfile
1_dotnet_grpc_bench/: Dockerfile
20_node_grpc_st_bench/: Dockerfile
21_dart_grpc_bench/: Dockerfile
22_node_grpcjs_st_bench/: Dockerfile
23_ruby_grpc_bench/: Dockerfile
24_python_grpc_bench/: Dockerfile
25_crystal_grpc_bench/: Dockerfile
2_java_grpc_zgc_bench/: Dockerfile
3_java_grpc_pgc_bench/: Dockerfile
4_java_grpc_she_bench/: Dockerfile
5_java_grpc_g1gc_bench/: Dockerfile
rust_thruster_mt_benchfail/: Cargo.toml  Dockerfile
(+14 files in other folders)
