[package]
name = "rust_thruster"
version = "0.1.0"
authors = ["trezm <peter.s.mertz@gmail.com>"]
edition = "2018"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true

[dependencies]
async-trait = "0.1.50"
bytes = "1.0.1"
dotenv = "0.15.0"
env_logger = "0.8.3"
log = "0.4.14"
hyper = "0.14.9"
http = "0.2.4"
http-body = "0.4.2"
prost = "0.7.0"
thruster = { version = "1.1.4", features = ["hyper_server"] }
thruster-grpc = { git = "https://github.com/thruster-rs/thruster-grpc" }
tokio = { version = "1.6.1", features = ["full"] }

futures = "0.3.15"

[build-dependencies]
prost-build = "0.7"

[[bin]]
name = "helloworld-server"
path = "src/main.rs"
